# neural-philology

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
eval/testsets/: equivalences_v1.csv  example.csv
scripts/: ngram_cooc.awk  ngram_unigram.awk
src/neural_philology/: cli.py  config.py  corpus.py  embeddings.py  evaluation.py  histwords.py  ngrams.py  queries.py
src/neural_philology/twec/: __init__.py  cooc.py  sgns.py  trainer.py
tests/: test_cooc.py  test_corpus.py  test_evaluation.py  test_queries.py  test_twec.py
